objects/SurveyProgramScreened__c.object
<CustomObject>
    <fields>
        <fullName>Program__c</fullName>
        <description>The program screened by the survey</description>
        <inlineHelpText>The program screened by the survey</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>SurveyProgramsScreened</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SurveyProgramScreenedEID__c</fullName>
        <description>The Enterprise ID for this Survey Program Screened record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Survey Program Screened record.</inlineHelpText>
        <label>Survey Program Screened EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>The survey that screened for the program</description>
        <inlineHelpText>The survey that screened for the program</inlineHelpText>
        <label>Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>Programs Screened</relationshipLabel>
        <relationshipName>SurveyProgramsScreened</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Program Screened</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Survey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Survey Programs Screened Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Programs Screened</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>